--- a/src/app/channels/list-channels/list-channels.component.html
+++ b/src/app/channels/list-channels/list-channels.component.html
@@ -1,3 +1,9 @@
+<div class="wrapper">
+
+<div class="refresh-wrapper">
+  <a class="btn waves-effect waves-light red refresh-btn" (click)="getChannels()"><i class="material-icons">refresh</i></a>
+</div>
+
 <div class="table-wrapper">
     <table class="highlight striped responsive-table centered" *ngIf="channels">
         <thead>
@@ -29,6 +35,14 @@
         {{ errorMessage }}
     </h5>
 </div>
+
 <div class="fixed-action-btn">
-    <a class="btn-floating btn-large waves-effect waves-light red" [ngClass]="{'pulse':!channels}" [routerLink]="['new']"><i class="material-icons">add</i></a>
+    <a class="btn-floating btn-large waves-effect waves-light red" [ngClass]="{'pulse':!channels}"><i class="material-icons">view_headline</i>
+    </a>
+    <ul>
+        <li><a class="btn-floating red" [routerLink]="['new']"><i class="material-icons">add</i></a></li>
+        <li><a class="btn-floating blue darken-1" [routerLink]="['/broadcast']"><i class="material-icons">message</i></a></li>
+        <li><a class="btn-floating green" (click)="getChannels()"><i class="material-icons">refresh</i></a></li>
+    </ul>
+</div>
 </div>
