--- a/src/app/channels/channel-details/channel-details.component.html
+++ b/src/app/channels/channel-details/channel-details.component.html
@@ -1,6 +1,6 @@
 <div class="container edit-channel-container">
   <div class="back-btn">
-    <button class="btn" (click)="goBack()"><i class="material-icons left">arrow_back</i>Back</button>
+    <button class="btn red" (click)="goBack()"><i class="material-icons left">arrow_back</i>Back</button>
   </div>
   <div class="row">
     <form class="col s12" [formGroup]="channelForm" (ngSubmit)="onSubmit()">
