--- a/src/app/channels/channel-details/channel-details.component.html
+++ b/src/app/channels/channel-details/channel-details.component.html
@@ -11,13 +11,14 @@
         </div>
       </div>
       <div class="row">
-          <div class="input-field col s12">
+        <div class="input-field col s12">
           <input id="channelHook" type="text" class="validate" formControlName="channelWebhook">
           <label for="channelHook" [ngClass]="{'active':channel}">Channel Webhook : </label>
         </div>
       </div>
       <div class="row">
-          <button type="submit" class="waves-effect waves-light btn" [disabled]="!channelForm.valid"><i class="material-icons left">{{logoName}}</i>{{buttonName}} Channel</button>
+        <button type="submit" class="waves-effect waves-light btn red" [disabled]="!channelForm.valid"><i
+            class="material-icons left">{{logoName}}</i>{{buttonName}} Channel</button>
       </div>
     </form>
   </div>
