--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -13,7 +13,7 @@
 			</div>
 		</ng-container>
 		<ng-container *ngIf="!user">
-			<a class="waves-effect waves-light btn" (click)="loginRedirect()"><i
+			<a class="waves-effect waves-light btn red" (click)="loginRedirect()"><i
 					class="material-icons left">person</i>Login</a>
 		</ng-container>
 	</div>
