Added loader. Changed error message implementation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container">
+<app-loading-spinner></app-loading-spinner>
+<main class="container">
 	<router-outlet></router-outlet>
-</div>
+</main>
